# pg-samples-rs

./: Cargo.toml  docker-compose.yaml
db/sql/: 00_prepare.sql  01_data.sql
db/sql/stored/: pg_get_procedure.sql  pg_get_select_composite.sql  pg_set_delete_worker.sql  pg_set_update_batch.sql
src/: composite.rs  logs.rs  main.rs  pg_type.rs  pool.rs  procedure.rs
