[package]
name = "pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bit-vec = "0.6"
chrono = {version="0.4", features=["serde", "clock"]}
deadpool-postgres = { version = "0.12", features = ["serde"] }
eui48 = "1.1"
geo-types = "0.7"
postgres-types = { version = "0.2", features = [
    "derive",
    "array-impls",
    "with-bit-vec-0_6",
    "with-cidr-0_2",
    "with-chrono-0_4",
    "with-eui48-1",
    "with-geo-types-0_7",
    "with-serde_json-1",
    "with-smol_str-01",
    "with-uuid-1",
    "with-time-0_3",
] }
rust_decimal = { version = "1.34", features = ["db-tokio-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
uuid = { version = "1.7.0", features = ["v4"] }
url = "2.5"



